--- a/.github/workflows/python-exe.yml
+++ b/.github/workflows/python-exe.yml
@@ -27,4 +27,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: main
-        path: exe/main.exe
+        path: dist/main.exe
