--- a/.github/workflows/python-exe.yml
+++ b/.github/workflows/python-exe.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m install.py
+        python install.py
         pip install pyinstaller
     - name: Build EXE
       run: |
