--- a/.github/workflows/python-exe.yml
+++ b/.github/workflows/python-exe.yml
@@ -5,7 +5,24 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
+  schedule:
+    - cron: '0 0 * * 1'
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
+    
 jobs:
   build:
     runs-on: windows-latest
